Fix control panel overflow issue

--- a/src/containers/SldEditor/sldEditor.css
+++ b/src/containers/SldEditor/sldEditor.css
@@ -31,7 +31,8 @@
   border-radius: 4px;
   /* prettier-ignore */
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-
+  overflow-x: hidden;
+  overflow-y: scroll;
   width: 100%;
   height: 30%;
   margin: 20px auto 0;
@@ -662,11 +663,6 @@
 
   #add-sld-btn {
     margin: 25px auto 80px;
-  }
-
-  .control-panel {
-    overflow-x: hidden;
-    overflow-y: scroll;
   }
 
   .mobile-control-panel,
